[package]
name = "asgi-server"
version = "0.1.0"
authors = ["Michael Killough <michaeljkillough@gmail.com>"]

[dependencies]
hyper = { git = "https://github.com/hyperium/hyper" }
rmp = "0.8"
redis = "0.8"
rand = "*"
serde = "0.9"
serde_derive = "0.9"
futures = "*"
futures-cpupool = "*"

# rmp-serde's support for serde 0.9 has not yet been released
rmp-serde = { git = "https://github.com/3Hren/msgpack-rust.git" }
crossbeam = "*"
