[package]
name = "asgi-server"
version = "0.1.0"
authors = ["Michael Killough <michaeljkillough@gmail.com>"]

[dependencies]
crossbeam = "0.2.10"
futures = "0.1.10"
futures-cpupool = "0.1.2"
hyper = { git = "https://github.com/hyperium/hyper" }
r2d2 = "0.7.1"
rand = "*"
redis = "0.8"
rmp = "0.8"
rmp-serde = "0.12.2"
serde = "0.9"
serde_derive = "0.9"
